data/resources/istio_objects/destination-rule-cb-broken.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dest-rule-cb-broken-auto
spec:
  host: reviews-broken
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 100
    loadBalancer:
      simple: RANDOM
  subsets:
    - labels:
        version: v1
      name: v1
